--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ force_grid_wrap = 0
 include_trailing_comma = True
 known_standard_library = tkinter
 known_first_party = brownie
-known_third_party = PySimpleGUI,Tkinter,base58,cid,daemon,dotenv,flask,git,ipdb,ipfshttpclient,matplotlib,networkx,owncloud,pygments,pymongo,pypandoc,pytest,pytz,settings,setuptools,sphinx_rtd_theme,termcolor,tests,web3,zc
+known_third_party = PySimpleGUI,Tkinter,base58,cid,daemon,dotenv,flask,git,ipdb,ipfshttpclient,matplotlib,networkx,owncloud,pygments,pymongo,pypandoc,pytest,pytz,setuptools,sphinx_rtd_theme,termcolor,tests,web3,zc
 line_length = 120
 multi_line_output = 3
 use_parentheses = True
