--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,6 @@ decorator==5.0.9
 defer==1.0.6
 distlib==0.3.2
 distro==1.6.0
-distro-info===0.23ubuntu1
 docutils==0.17.1
 duplicity==0.8.12.0
 eip712==0.1.0
@@ -112,7 +111,7 @@ inflection==0.5.1
 iniconfig==1.1.1
 install==1.3.4
 ipdb==0.13.9
-ipfshttpclient==0.7.0
+ipfshttpclient @ https://github.com/avatar-lavventura/py-ipfs-http-client/archive/refs/heads/master.zip
 ipython==7.26.0
 ipython-genutils==0.2.0
 isort==5.9.3
@@ -326,7 +325,6 @@ Werkzeug==2.0.1
 wrapt==1.12.1
 WSGIProxy2==0.4.6
 WTForms==2.3.3
-xkit==0.0.0
 xlrd==2.0.1
 yapf==0.31.0
 yarl==1.6.3
